# fastapi_async_mongo_demo

./: LICENSE  README.md  pyproject.toml
app/: db.py  main.py  utils.py  views.py
app/schemas/: __init__.py  item.py  user.py
