[tool.poetry]
name = "fastapi-async-mongo-demo"
version = "0.1.0"
description = ""
authors = ["Waket Zheng <waketzheng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
motor = "^3.3.2"
fastapi-cdn-host = "^0.4.0"
email-validator = "^2.1.0.post1"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
fast-tort-cli = {extras = ["all"], version = "^0.5.2"}
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
